# dungeon-sheets

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  README.rst  plan-magicItemFormSeparation.prompt.md  pyproject.toml  requirements-tests.txt  texlive.profile
.devcontainer/: .zshrc  Dockerfile  README.md  devcontainer.json  install-texlive-packages.sh  post-create.sh  run-tests.sh  setup.sh
.devcontainer/patches/: README.md  dndtemplate-submodule-fonts.patch
.github/: copilot-instructions.md
.github/workflows/: docker.yml  python-ci.yml
docs/: advanced_features.rst  architecture_decision_0001.rst  character_files.rst  conf.py  index.rst
dungeonsheets/: __init__.py  armor.py  background.py  character.py  content.py  content_registry.py  create_character.py  dice.py  encounter.py  epub.py  equipment_reader.py  exceptions.py  fill_pdf_template.py  forms.py  infusions.py  latex.py  magic_items.py  make_sheets.py  mechanics.py  race.py  random_tables.py  readers.py  stats.py  weapons.py  yaml_content.py
dungeonsheets/classes/: __init__.py  artificer.py  bloodhunter.py  classes.py  druid.py  ranger.py  rogue.py  warlock.py
dungeonsheets/data/: armor.yaml  backgrounds.yaml  magic_items.yaml  spells.yaml  weapons.yaml
dungeonsheets/data/monsters/: monsters_a.yaml  monsters_b.yaml  monsters_c.yaml  monsters_d.yaml  monsters_e.yaml  monsters_f.yaml  monsters_g.yaml  monsters_h.yaml  monsters_i.yaml  monsters_j.yaml  monsters_k.yaml  monsters_l.yaml  monsters_m.yaml  monsters_n.yaml  monsters_o.yaml  monsters_p.yaml  monsters_q.yaml  monsters_r.yaml  monsters_s.yaml  monsters_t.yaml  monsters_u.yaml  monsters_v.yaml  monsters_w.yaml  monsters_x.yaml  monsters_y.yaml  monsters_z.yaml
dungeonsheets/data/spells/: spells_a.yaml  spells_b.yaml  spells_c.yaml  spells_d.yaml  spells_e.yaml  spells_f.yaml  spells_g.yaml  spells_h.yaml  spells_i.yaml  spells_j.yaml  spells_k.yaml  spells_l.yaml  spells_m.yaml  spells_n.yaml  spells_o.yaml  spells_p.yaml  spells_r.yaml  spells_s.yaml  spells_t.yaml  spells_u.yaml  spells_v.yaml  spells_w.yaml  spells_z.yaml
dungeonsheets/features/: __init__.py  artificer.py  backgrounds.py  bloodhunter.py  druid.py  features.py  paladin.py  races.py  ranger.py  rogue.py  sorcerer.py  warlock.py
dungeonsheets/forms/: latex_character_sheet.tex  magic_items_template.tex  preamble.tex
dungeonsheets/modules/: dndtemplate-wrapper.sty
dungeonsheets/monsters/: __init__.py  monsters.py  monsters_a.py  monsters_b.py  monsters_c.py  monsters_d.py  monsters_e.py  monsters_f.py  monsters_g.py  monsters_h.py  monsters_i.py  monsters_j.py  monsters_k.py  monsters_l.py  monsters_m.py  monsters_n.py  monsters_o.py  monsters_p.py  monsters_q.py  monsters_r.py  monsters_s.py  monsters_t.py  monsters_u.py  monsters_v.py  monsters_w.py  monsters_x.py  monsters_y.py  monsters_z.py
dungeonsheets/spells/: __init__.py  spells.py  spells_a.py  spells_b.py  spells_c.py  spells_f.py  spells_g.py  spells_h.py  spells_i.py  spells_m.py  spells_n.py  spells_o.py  spells_p.py  spells_r.py  spells_s.py  spells_t.py
examples/: artificer3.py  warlock1.py
scripts/: benchmark_lazy_loading.py  convert_monsters.py  run-local-smoke-tests.sh
tests/: test_armor_yaml.py  test_background_yaml.py  test_character.py  test_content_registry.py  test_dice.py  test_encounter.py  test_epub.py  test_equipment_reader.py  test_features.py  test_html.py  test_latex.py  test_magic_items.py  test_magic_items_phase3.py  test_magic_items_yaml.py  test_make_sheets.py  test_monsters.py  test_monsters_yaml.py  test_readers.py  test_spells_yaml.py  test_weapon.py  test_weapons_yaml.py  test_yaml_content_loader.py
tests/fixtures/: monsters_test.yaml
tmp/: mcp-debug-note.txt  mcp-write-probe.txt
