[project]
name = "dungeonsheets"
version = "0.19.0"
description = "Dungeons and Dragons 5e Character Tools"
authors = [{ name = "Mark Wolfman", email = "mark@magicacid.com" }]
requires-python = ">=3.10"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = [
    "D&D",
    "character",
    "sheets",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "certifi",
    "fdfgen",
    "npyscreen",
    "jinja2",
    "sphinx",
    "EbookLib",
    "reportlab",
    "docutils",
    "pypdf>=5.2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/canismarko/dungeon-sheets"
"Bug Tracker" = "https://github.com/canismarko/dungeon-sheets/issues"

[project.scripts]
makesheets = "dungeonsheets.make_sheets:main"
create-character = "dungeonsheets.create_character:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # import sorting
]
ignore = [
    "E501",  # keep long narrative/table text untouched in this migration
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",  # allow explicit re-exports
    "F403",  # allow wildcard imports in package aggregators
]
"dungeonsheets/features/bloodhunter.py" = [
    "F811",  # legacy duplicate class names are used as alternate feature definitions
]
"dungeonsheets/mechanics.py" = [
    "F401",  # convenience module intentionally re-exports symbols
]

[tool.coverage.run]
omit = [
    "dungeonsheets/create_character.py",
    "dungeonsheets/fill_pdf_template.py",
    "dungeonsheets/pdf_image_insert.py",
    "dungeonsheets/make_sheets.py",
]

[tool.setuptools.package-data]
dungeonsheets = [
    "data/*.yaml",
    "data/spells/*.yaml",
    "forms/*pdf",
    "forms/*.tex",
    "forms/*.txt",
    "modules/DND-5e-LaTeX-Template/*",
    "modules/DND-5e-LaTeX-Template/lib/*",
    "modules/DND-5e-LaTeX-Template/img/*",
]

[tool.setuptools_scm]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
